Upgraded to Java 17